[generator] Handle Enumeration Member defined for multiple Enumeration types #74